Deploy: Fix accordion content squishing and make Dobra titles orange

--- a/src/components/ui/SectionSideLabel.css
+++ b/src/components/ui/SectionSideLabel.css
@@ -18,7 +18,7 @@
 .section-label-number {
   font-size: 4rem;
   font-weight: normal;
-  color: #a3a3a3; 
+  color: #ff5a36; 
   text-shadow: 0px 2px 5px rgba(0,0,0,0.8);
   line-height: 1;
 }
@@ -26,7 +26,7 @@
 .section-label-text {
   font-size: 4rem;
   font-weight: normal;
-  color: #a3a3a3; 
+  color: #ff5a36; 
   letter-spacing: 2px;
   text-shadow: 0px 2px 5px rgba(0,0,0,0.8);
   white-space: normal;
